# Agent_Life_Space

./: .env.example  .git_commit_test  .gitignore  BLUEPRINT.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DOCS.md  Dockerfile  JOHN.md  LICENSE  README.md  SECURITY.md  VERIFICATION.md  docker-compose.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
agent/: __init__.py  __main__.py  cli_client.py
agent/brain/: __init__.py  decision_engine.py  dispatcher.py  knowledge.py  learning.py  programmer.py  semantic_router.py  skills.json  skills.py  spec_coach.py  telegram_intents.py  tool_router.py
agent/control/: acquisition.py  archival.py  artifact_queries.py  denials.py  evidence_export.py  gateway.py  intake.py  job_queries.py  llm_runtime.py  models.py  pipeline.py  policy.py  recurring.py  reporting.py  runtime_model.py  settlement.py  state.py  storage.py  workspace_queries.py
agent/core/: __init__.py  action.py  agent.py  agent_loop.py  approval.py  approval_storage.py  brain.py  cron.py  error_normalize.py  explanation.py  identity.py  job_runner.py  llm_client.py  llm_provider.py  llm_router.py  maintenance.py  messages.py  models.py  notification_dedup.py  operator.py  paths.py  persona.py  response_quality.py  router.py  sandbox.py  sandbox_executor.py  self_update.py  status.py  tool_executor.py  tool_loop.py  tool_policy.py  tools.py  utils.py  watchdog.py  web.py
agent/docs/: research_agent_frameworks.md
agent/finance/: __init__.py  budget_policy.py  risk_templates.py  tracker.py
agent/initiative/: BACKLOG.md  CCUNPACKED_LEARNINGS.md  DEPLOYMENT.md  __init__.py  engine.py  executor.py  planner.py  prompts.py  schemas.py
agent/logs/: __init__.py  logger.py  retention.py
agent/marketplace/: __init__.py  connectors.py  models.py  obolos.py  obolos_cli.py  service.py
agent/memory/: __init__.py  consolidation.py  inspection.py  persistent_conversation.py  rag.py  semantic_cache.py  store.py
agent/projects/: __init__.py  manager.py
agent/realestate/: __init__.py  models.py  notifier.py  report.py  runner.py  scorer.py  scraper.py  store.py  telegram_cmds.py
agent/review/: __init__.py  analyzers.py  golden_cases.py  models.py  quality.py  redaction.py  service.py  storage.py  verifier.py
agent/social/: __init__.py  agent_api.py  channel.py  channel_policy.py  dashboard.py  request_identity.py  telegram_bot.py  telegram_handler.py  terminal_repl.py
agent/tasks/: __init__.py  manager.py
agent/vault/: __init__.py  secrets.py
agent/web_monitor/: __init__.py  extraction.py  models.py  service.py
agent/work/: __init__.py  workspace.py
deploy/: agent-life-space.service
docs/: BLUEPRINT.md  CONTROLLED_ENVIRONMENTS.md  DOCS.md  END_TO_END_USE_CASE.md  IDEA_REVIEW_AND_EXPANSION_2026_03.md  JOHN_AUTONOMY_DEBT.md  LEARNING_MODEL.md  OPERATOR_HANDBOOK.md  PRODUCT_IDENTITY.md  RELEASE_CHECKLIST.md  RELEASE_v1.0.md  REVIEW_NOTES.md  SECURITY_INCIDENT_2026-04-07.md  SECURITY_MODEL.md  SELF_UPDATE.md  VERIFICATION.md
operator/: MAPPING.md  README.md  package-lock.json  package.json  tsconfig.json
scripts/: setup_vault.py
tests/: test_action_envelope.py  test_agent_api_review.py  test_agent_loop.py  test_agent_status.py  test_api_audit.py  test_approval_queue.py  test_architecture_invariants.py  test_audit_v2_regressions.py  test_brain.py  test_brain_core.py  test_brain_memory.py  test_brain_persistence.py  test_budget_policy.py  test_build_codegen.py  test_build_domain.py  test_channel_policy.py  test_consolidation.py  test_control_plane.py  test_control_plane_jobs.py  test_dashboard_settlement.py  test_deployment_contracts.py  test_dispatcher_remember.py  test_docker_executor.py  test_e2e_effectiveness.py  test_explanation.py  test_finance.py  test_finance_approval.py  test_gateway.py  test_integration.py  test_job_runner.py  test_learning.py  test_learning_eval.py  test_learning_feedback.py  test_llm_client.py  test_llm_provider.py  test_llm_router.py  test_llm_runtime.py  test_log_redaction.py  test_log_retention.py  test_logger.py  (+62 more)
(+67 files in other folders)
