[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agent"]

[project]
name = "agent-life-space"
version = "0.1.0"
description = "Self-hosted autonomous agent environment"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40.0",
    "pydantic>=2.0.0",
    "jsonschema>=4.20.0",
    "structlog>=24.0.0",
    "aiohttp>=3.9.0",
    "asyncio-mqtt>=0.16.0",
    "apscheduler>=3.10.0",
    "aiosqlite>=0.20.0",
    "orjson>=3.9.0",
    "watchdog>=4.0.0",
    "psutil>=5.9.0",
    "cryptography>=42.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.3.0",
    "mypy>=1.8.0",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "S", "B", "A", "C4", "UP"]
# S = security checks (bandit), B = bugbear, A = builtins, C4 = comprehensions

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
