[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agent"]

[project]
name = "agent-life-space"
version = "1.4.0"
description = "Self-hosted autonomous agent environment"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40.0",
    "pydantic>=2.0.0",
    "jsonschema>=4.20.0",
    "structlog>=24.0.0",
    "aiohttp>=3.9.0",
    "asyncio-mqtt>=0.16.0",
    "apscheduler>=3.10.0",
    "aiosqlite>=0.20.0",
    "orjson>=3.9.0",
    "watchdog>=4.0.0",
    "psutil>=5.9.0",
    "cryptography>=42.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.3.0",
    "mypy>=1.8.0",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "S", "B", "A", "C4", "UP"]
ignore = [
    "E501",   # line-too-long — ruff format handles this
    "UP042",  # replace-str-enum — Pydantic requires str+Enum pattern
    "S110",   # try-except-pass — intentional fallback pattern
    "N806",   # non-lowercase-variable-in-function — used for constants in functions
    "S108",   # hardcoded-temp-file — /tmp usage is intentional (PID file, Docker tmpfs)
]
# S = security checks (bandit), B = bugbear, A = builtins, C4 = comprehensions

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "S105", "S106", "S108", "S607", "B017"]  # assert, passwords, /tmp, partial path, assertRaises — OK in tests
"agent/core/agent_loop.py" = ["S603", "S607"]  # subprocess — intentional, sanitized
"agent/core/sandbox.py" = ["S603", "S607"]  # subprocess — Docker sandbox, controlled
"agent/core/maintenance.py" = ["S603", "S607"]  # subprocess — system maintenance
"agent/brain/programmer.py" = ["S603", "S607"]  # subprocess — pytest/py_compile
"agent/brain/learning.py" = ["S603", "S607"]  # subprocess — skill tests
"agent/review/analyzers.py" = ["S603", "S607"]  # subprocess — git diff analysis
"agent/social/telegram_handler.py" = ["S603", "S607", "E741"]  # subprocess — Claude CLI; l=line in list comp
"agent/**/__main__.py" = ["S603", "S607"]
"agent/memory/persistent_conversation.py" = ["S101", "S608"]  # assert for DB preconditions; SQL built safely with params
"agent/projects/manager.py" = ["S101"]  # assert for DB preconditions

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
filterwarnings = [
    "error",
    # Mock coroutine warning from unittest.mock internals — not our code
    "ignore::RuntimeWarning:unittest.mock",
    # sqlite3 Connection.__del__ fires during GC between test modules — not a real leak
    "ignore:Exception ignored in.*Connection.__del__:pytest.PytestUnraisableExceptionWarning",
]
